updated Design to correct visibility and and CSS Wipe/replace

--- a/src/main/resources/static/css/indexStyle.css
+++ b/src/main/resources/static/css/indexStyle.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #FAEBD7;
+    background-color: #fff;
 }
 
 
@@ -30,14 +30,14 @@ body {
     margin-bottom: 2em;
     text-align: center;
 }
-#footer{
+/*#footer{
     padding: 1.5em;
     text-align: center;
     border: 2px solid black;
     background-color: #b3cdd1 !important;
     background-image: linear-gradient(315deg, #b3cdd1 0%, #9fa4c4 74%);
     color: #BD7979FF;
-}
+}*/
 /*-- profile styling --*/
 hr{
     width: 90em;
@@ -136,8 +136,8 @@ img{
 
 .landing-container {
     box-shadow: 0 14px 28px rgba(5, 0, 9, 0.58), 0 10px 10px rgb(250, 235, 215);
-    border: #efa440 solid 3px;
-    background-color: #d6b4b4;
+    border: #0f1e37 solid 3px;
+    background-color: #404d60;
     text-align: center;
     position: center;
     margin-left: 40px;
@@ -154,35 +154,42 @@ img{
     height: 183px;
     box-shadow: 5px 5px 15px 5px black;
 }
-/*Index Navbar*/
+/*!*Index Navbar*!
 .navbar {
     background-color: #b3cdd1 !important;
     background-image: linear-gradient(315deg, #b3cdd1 0%, #9fa4c4 74%);
 
-}
+}*/
 .navbar a {
-    color: #BD7979FF;
+    color: #fff;
 }
 /*Idex  Data text*/
 .text-head {
-    color: #BD7979FF;
+    color: #1f6570;
 }
 h2 {
-    color: black;
+    color: #1f6570;
 }
 a {
-    color: #BD7979FF;
+    color: #fffef2;
 }
 .bg-secondary {
-    background: linear-gradient(to right, #8a898b, #aea5b6);
+    background-image: linear-gradient(315deg,#1f6570 0%,#172a43 74%);
 }
 .btn-primary {
-    background: linear-gradient(to right, #8a898b, #aea5b6);
+    background-image: linear-gradient(315deg,#1f6570 0%,#172a43 74%);
 }
 .subheader {
     width: 100%;
     height: 5px;
-    background-color: silver;
+    background-color: #1f6570;
+}
+
+.bg-secondary {
+    background-image: linear-gradient(315deg,#1f6570 0%,#172a43 74%);
+}
+button.btn.button {
+    color: #fff;
 }
 
 
