--- a/src/main/resources/static/css/ledger.css
+++ b/src/main/resources/static/css/ledger.css
@@ -1,3 +1,7 @@
+
+
+
+
 p {
     margin-bottom: 0.5rem;
 }
@@ -17,30 +21,33 @@ hr {
 }
 
 .modal-body {
-    background: linear-gradient(to right, #8a898b, #aea5b6);
-}
+    background: linear-gradient(to right, #172a43, #1f6570);}
 .modal-header {
-    background-color: #d6b4b4;
+    background-color: #404d60;
+}
+h5#formModalLabel {
+    color: #fff;
 }
 
 button.btn.btn-primary {
     border: solid ghostwhite 2px;
-    background-color: #d6b4b4;
+    background-color: #172a43;
 }
 body {
     background-color: #FAEBD7;
 }
 div#infoView {
-    background: linear-gradient(to right, #8a898b, #aea5b6);
+    background: linear-gradient(to right, #172a43, #1f6570);
     box-shadow: 0 14px 28px rgb(7 6 9 / 58%), 0 10px 10px rgb(230 229 232);
     margin-bottom: 5%;
+    color: #fffef2;
 }
 /*a.nav-link {
     background-color: #FAEBD7;
 
 }*/
 .model-bg {
-    background-color: #FAEBD7;
+    background-color: #FFF;
 
 }
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
@@ -53,14 +60,14 @@ div#infoView {
     color: #9e8686;
 }
 
-  .btn  {
-display: inline-block;
+.btn  {
+    display: inline-block;
 }
-  .btn-center {
-      text-align: center;
-  }
+.btn-center {
+    text-align: center;
+}
 .btn-primary {
-    background: linear-gradient(to right, #8a898b, #aea5b6);
+    background: linear-gradient(to right, #172a43, #1f6570);
     border: whitesmoke 3px;
 }
 .subheader {
@@ -70,6 +77,7 @@ display: inline-block;
 }
 /*temp nav bar  Delete*/
 
+/*
 .navbar {
     background-color: #b3cdd1 !important;
     background-image: linear-gradient(315deg, #b3cdd1 0%, #9fa4c4 74%);
@@ -86,12 +94,18 @@ display: inline-block;
 a.navbar-brand {
     font-family: 'Luxurious Script',cursive;
 }
+*/
 
 #footer{
     padding: 1.5em;
     text-align: center;
     border: 2px solid black;
     background-color: #b3cdd1 !important;
-    background-image: linear-gradient(315deg, #b3cdd1 0%, #9fa4c4 74%);
-    color: #BD7979FF;
+    background: linear-gradient(to right, #172a43, #1f6570);
+    color: #fff;
+}
+
+link.active {
+    color: ghostwhite;
+    background-color: #404d60;
 }
