--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,15 +1,19 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
-@import url('https://fonts.googleapis.com/css2?family=Radio+Canada:wght@300&display=swap');
+
+
+    /*@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+    @import url('https://fonts.googleapis.com/css2?family=Radio+Canada:wght@300&display=swap');*/
 * {
     box-sizing: border-box;
 }
 
 body {
-    background: #333;
+
     font-family: 'Montserrat', sans-serif;
     height: 100vh;
     margin: -20px 0 50px;
     /*  cursor: grabbing;*/
+    background-color: #404d60;
+
 }
 .S9gUrf-YoZ4jf, .S9gUrf-YoZ4jf * {
     z-index: 1000;
@@ -18,7 +22,9 @@ nav {
     display: flex;
     flex-direction: row;
 
+    /*
     color: #7d11e3;
+    */
     /* border: #212121 solid 3px;*/
     width: 100%;
     height: 90px;
@@ -33,11 +39,11 @@ nav {
     text-align: left;
     padding-left: 10px;
 }
-
+/*Left Side Text*/
 h1 {
     font-weight: bold;
     margin: auto;
-    text-align: end;
+    text-align: start;
 }
 h1:hover {
     background: linear-gradient(to right, #8a898b, #aea5b6);
@@ -47,7 +53,7 @@ h1:hover {
 .form-header {
     font-family: sans-serif;
     color: whitesmoke;
-    background-image: linear-gradient(to right, #8a898b, #aea5b6);
+    /* background-image: linear-gradient(315deg,#1f6570 0%,#172a43 74%); */
     border-radius: 5px;
     padding: 5px 10px 5px 10px;
 }
@@ -66,7 +72,7 @@ p:hover {
 .btn-login {
     margin: 5px 5px 5px 5px;
     height: 40px;
-    background-image: linear-gradient(to right, #8a898b, #aea5b6);
+    background: linear-gradient(to right, #172a43, #1f6570);
     width: 90px;
     color: ghostwhite;
 }
@@ -89,7 +95,7 @@ a {
 
 form {
     /* background-color: #FFFFFF;*/
-    background-color: #BD7979FF;
+    background-color: #404d60;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -97,6 +103,7 @@ form {
     padding: 0 50px;
     height: 100%;
     text-align: center;
+    /*margin: 0 0 0 32%;*/
 }
 
 button:not(:disabled) {
@@ -143,7 +150,7 @@ input {
 }
 
 .overlay {
-    background: linear-gradient(to right, #8a898b, #aea5b6);
+    background: linear-gradient(to right, #172a43, #1f6570);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0 0;
@@ -235,22 +242,29 @@ span:nth-child(2) {
     font-size: large;
 }
 /*Keep me, will consolidate*/
-.navbar {
-    background-color: #121313 !important;
-    background-image: linear-gradient(315deg, #b3cdd1 0%, #9fa4c4 74%);
+/*.navbar {
 
-}
-.navbar a {
+    background-image: linear-gradient(315deg,#1f6570 0%,#172a43 74%);
+
+}*/
+/*.navbar a {
     color: #BD7979FF;
     font-weight: bolder;
-}
+}*/
+
+/*.navbar a {
+    font-weight: bolder;
+    color: #f8f0c6;
+}*/
+/*
 .navbar-light .navbar-brand {
-    color: rgba(0,0,0,.9);
+    color: rgb(255, 255, 255);
     font-family: 'Luxurious Script',cursive;
 }
 a.navbar-brand {
     font-family: 'Luxurious Script',cursive;
 }
+*/
 
 .footer {
     position: fixed;
@@ -258,20 +272,24 @@ a.navbar-brand {
     left: 0px;
     right: 0px;
     margin-bottom: 0px;
+    background-color: #172a43;
 }
-.subheader {
+.navbar-light .navbar-brand {
+    color: rgb(255, 255, 255);
+}
+/*.subheader {
     width: 100%;
     height: 5px;
-    background-color: silver;
-}
+    background-color: #1f6570;
+}*/
 
 /*----*/
 
 
 /*Temp Register*/
-.col-8 {
+/*.col-8 {
     background: linear-gradient(to right, #8a898b, #aea5b6);
-}
+}*/
 
 div#passwordHelp {
     color:  #3e4245;
@@ -294,9 +312,17 @@ input#submitBtn {
 }
 
 .btn-primary {
-    background: linear-gradient(to right, rgb(138, 137, 139), rgb(174, 165, 182));
+
+    background: linear-gradient(to right, #172a43, #1f6570);
+
     border-width: 3px;
     border-style: initial;
-    border-color: whitesmoke;
+    /*   border-color: #ef0c0c;*/
     border-image: initial;
+}
+/*.bg-secondary {
+    background-color: #172a43;
+}*/
+button:not(:disabled) {
+    border: solid ghostwhite;
 }
