--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -9,10 +9,14 @@
 }
 .navbar-light .navbar-brand {
     color: rgb(255, 255, 255);
-    font-family: 'Luxurious Script',cursive;
+  /*  font-family: 'Luxurious Script',cursive;*/
 }
 a.navbar-brand {
     font-family: 'Luxurious Script',cursive;
+}
+/*Navbar */
+a#title-nav {
+    color: #fff;
 }
 .subheader {
     width: 100%;
@@ -22,8 +26,18 @@ a.navbar-brand {
 
 .footer {
     position: fixed;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    margin-bottom: 0px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin-bottom: 0;
+}
+/*Footer*/
+.bg-secondary {
+    background-color: #172a43;
+}
+button:not(:disabled) {
+    border: solid #1f6570;
+}
+button.btn.button {
+    color: white;
 }
