--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -1,36 +1,43 @@
+
 body {
- background-color: #BD7979FF;
+ /*background-color: #fffef2;*/
+ background-color: #fff;
 }
-body {
- background-color: #faebd7;
-}
-.navbar {
+/*.navbar {
  background-color: #b3cdd1 !important;
  background-image: linear-gradient(315deg, #b3cdd1 0%, #9fa4c4 74%);
 
-}
-.navbar a {
- color: #BD7979FF;
- font-weight: bolder;
-}
-.footer {
- position: fixed;
- bottom: 0px;
- left: 0px;
- right: 0px;
- margin-bottom: 0px;
-}
+}*/
+
+
+/*
 .subheader {
  width: 100%;
  height: 5px;
  background-color: silver;
 }
+*/
 
 
 /*Can be added to nav*/
 .bg-secondary {
- background: linear-gradient(to right, #8a898b, #aea5b6);
+ background: linear-gradient(to right, #172a43, #1f6570);
 }
+.btn-secondary {
+ color: #fff;
+ background: linear-gradient(to right, #172a43, #1f6570);
+ border-color: #1f6570;
+}
+.subheader {
+ width: 100%;
+ height: 5px;
+ background-color: #1f6570;
+}
+button:not(:disabled) {
+ border: solid #1f6570;
+ background: linear-gradient(to right, #172a43, #1f6570);
+}
+
 .bg-secondary a:hover {
  color: ghostwhite;
 }
@@ -41,4 +48,10 @@ img {
  /*
  vertical-align: middle;
  */
+}
+
+.subheader {
+ width: 100%;
+ height: 5px;
+ background-color: #1f6570;
 }
