--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -1,3 +1,5 @@
+
+
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 @import url('https://fonts.googleapis.com/css2?family=Radio+Canada:wght@300&display=swap');
 * {
@@ -14,12 +16,12 @@ body {
 .container.col-8 {
     border-radius: 5px;
 }
-nav {
+/*nav {
     display: flex;
     flex-direction: row;
 
-   /* color: #7d11e3;*/
-    /*border: #212121 solid 3px;*/
+   !* color: #7d11e3;*!
+    !*border: #212121 solid 3px;*!
     width: 100%;
     height: 70px;
     text-align: center;
@@ -28,7 +30,7 @@ nav {
     font-weight: bolder;
 
 
-}
+}*/
 .nav-logo {
     text-align: left;
     padding-left: 10px;
@@ -39,6 +41,11 @@ h1 {
     margin: auto;
     text-align: end;
 }
+h1.text-center {
+    font-family: 'Luxurious Script',cursive;
+    color: #fffef2;
+}
+
 h1:hover {
     color:silver;
     transition: ease-out 1s;
@@ -74,7 +81,7 @@ a {
 
 form {
     /* background-color: #FFFFFF;*/
-    background-color: #BD7979FF;
+    background-color: #f3f3f3;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -89,7 +96,7 @@ input {
     border: none;
     padding: 12px 15px;
     margin: 8px 0;
-    width: 100%;
+    width: 38%;
 }
 
 .container {
@@ -122,7 +129,7 @@ input {
 }
 
 
-/*Keep me, will consolidate*/
+/*Keep me, will consolidate*//*
 .navbar {
     background-color: #121313 !important;
     background-image: linear-gradient(315deg, #b3cdd1 0%, #9fa4c4 74%);
@@ -138,7 +145,7 @@ input {
 }
 a.navbar-brand {
     font-family: 'Luxurious Script',cursive;
-}
+}*/
 
 .footer {
     position: fixed;
@@ -158,15 +165,13 @@ a.navbar-brand {
 
 /*Temp Register*/
 .col-8 {
-    background: linear-gradient(to right, #8a898b, #aea5b6);
+    background-image: linear-gradient(315deg,#1f6570 0%,#172a43 74%);
 }
 
 div#passwordHelp {
     color:  #3e4245;
 }
-h1.text-center {
-    font-family: 'Luxurious Script',cursive;
-}
+
 
 
 
